--- a/css/main.css
+++ b/css/main.css
@@ -1705,14 +1705,14 @@ img {
 }
 @media screen and (min-width: 480px) {
   .modal {
-    max-width: 450px;
-    max-height: 609px;
+    width: 450px;
+    height: 609px;
   }
 }
 @media screen and (min-width: 1200px) {
   .modal {
-    max-width: 528px;
-    max-height: 581px;
+    width: 528px;
+    height: 581px;
   }
 }
 .modal__button {
