--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,12 +11,12 @@
   width: 95%;
 
   @media screen and (min-width: 480px) {
-    max-width: 450px;
-    max-height: 609px;
+    width: 450px;
+    height: 609px;
   }
   @media screen and (min-width: 1200px) {
-    max-width: 528px;
-    max-height: 581px;
+    width: 528px;
+    height: 581px;
   }
 
   background-color: var(--main-bcg-color);
