--- a/css/main.css
+++ b/css/main.css
@@ -411,6 +411,17 @@ img {
   }
 }
 
+.works-section {
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .works-section {
+    display: block;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
