--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -7,3 +7,11 @@
     padding-bottom: 94px;
   }
 }
+.works-section {
+  display: none;
+  @media screen and (min-width: 1200px) {
+    display: block;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
