--- a/css/main.css
+++ b/css/main.css
@@ -461,6 +461,9 @@ img {
   }
 }
 
+.mob-menu {
+  z-index: 2;
+}
 @media screen and (max-width: 767px) {
   .mob-menu {
     display: -webkit-box;
@@ -539,7 +542,7 @@ img {
 }
 
 .navigation {
-  z-index: 2;
+  z-index: 999;
 }
 @media screen and (min-width: 768px) {
   .navigation {
@@ -608,8 +611,10 @@ img {
   color: var(--accent-color);
 }
 
-.contacts {
-  margin-left: auto;
+@media screen and (min-width: 768px) {
+  .contacts {
+    margin-left: auto;
+  }
 }
 
 .contacts__list {
@@ -1672,12 +1677,22 @@ img {
 }
 
 .backdrop {
+  z-index: 2;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: var(--backdrop-color);
   opacity: 1;
   visibility: visible;
@@ -1697,24 +1712,17 @@ img {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  height: 95%;
-  width: 95%;
+  position: relative;
+  display: block;
   background-color: var(--main-bcg-color);
+  height: 100%;
+  width: 100%;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
-  -webkit-transition: -webkit-transform 250ms var(--main-cubic);
-  transition: -webkit-transform 250ms var(--main-cubic);
-  transition: transform 250ms var(--main-cubic);
-  transition: transform 250ms var(--main-cubic), -webkit-transform 250ms var(--main-cubic);
   padding: 40px;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .modal {
     width: 450px;
     height: 609px;
@@ -1722,6 +1730,15 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    -webkit-transition: -webkit-transform 250ms var(--main-cubic);
+    transition: -webkit-transform 250ms var(--main-cubic);
+    transition: transform 250ms var(--main-cubic);
+    transition: transform 250ms var(--main-cubic), -webkit-transform 250ms var(--main-cubic);
     width: 528px;
     height: 581px;
   }
