--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -1,10 +1,15 @@
 .backdrop {
+  z-index: 2;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   padding: 10px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   background-color: var(--backdrop-color);
 
