--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,29 +3,31 @@
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position: relative;
+  display: block;
+  background-color: var(--main-bcg-color);
 
-  height: 95%;
-  width: 95%;
+  height: 100%;
+  width: 100%;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 768px) {
     width: 450px;
     height: 609px;
   }
   @media screen and (min-width: 1200px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms var(--main-cubic);
+
     width: 528px;
     height: 581px;
   }
 
-  background-color: var(--main-bcg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms var(--main-cubic);
 
   padding: 40px;
 
