--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -27,6 +27,7 @@
 }
 
 .mob-menu {
+  z-index: 2;
   @media screen and (max-width: 767px) {
     display: flex;
     flex-direction: column;
@@ -98,7 +99,7 @@
 }
 
 .navigation {
-  z-index: 2;
+  z-index: 999;
   @media screen and (min-width: 768px) {
     margin-right: 84px;
   }
@@ -168,7 +169,9 @@
 }
 
 .contacts {
-  margin-left: auto;
+  @media screen and (min-width: 768px) {
+    margin-left: auto;
+  }
 }
 
 .contacts__list {
